# generalCompilator2

./: README.md  generalCompilator2.cabal  stack.yaml
src/: Lib.hs
